<resources>
    <string name="app_name">PlantTracker</string>
    <string name="no_plants_found">No Plants Found</string>
    <string name="menu">Menu</string>
    <string name="go_back">Go Back</string>
    <string name="more_options">More Options</string>
    <string name="add_plant">Add Plant</string>
    <string name="plant_name_input_label">Plant Name</string>
    <string name="plant_image_description">Image of the plant.</string>
    <string name="select_image">Select Image</string>
    <string name="connection_error">Connection Failed\nRefresh to try again.</string>
    <string name="select_pi_hint">Select Pi</string>
    <string name="select_device_hint">Select Device</string>
    <string name="light_level_title">Light Level</string>
    <string name="slider_label_low">Low</string>
    <string name="slider_label_med">Medium</string>
    <string name="slider_label_high">High</string>
    <string name="select_port_hint">Select Sensor Port</string>
    <string name="minimum_moisture_title">Minimum Moisture</string>
    <string name="min_humidity_title">Minimum Humidity %</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_plant">Edit Plant</string>
</resources>